--- a/app/src/main/res/layout/fragment_student_list.xml
+++ b/app/src/main/res/layout/fragment_student_list.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/student_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/student_list_recycler_view"/>
+        android:layout_height="match_parent" />
+
+
 </android.support.design.widget.CoordinatorLayout>
