--- a/app/src/main/res/layout/list_organization.xml
+++ b/app/src/main/res/layout/list_organization.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <TextView
-        android:id="@+id/list_item_company_name"
+        android:id="@+id/list_item_organization_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="36dp"
@@ -13,8 +14,8 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="8dp"
+        android:text="@string/company_name"
         android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:text="@string/student_name"/>
+        android:textSize="16sp" />
 
 </LinearLayout>
