Redirecting to Authentication Activity Fixed

--- a/app/src/main/res/menu/add_menu.xml
+++ b/app/src/main/res/menu/add_menu.xml
@@ -2,10 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <item
-        android:id="@+id/miProfile"
-        android:title="@string/sign_out"
+        android:id="@+id/miAdd"
+        android:title="@string/add_organization"
         app:showAsAction="always|withText"></item>
 
 
