--- a/app/src/main/res/layout/fragment_vacancy_detail.xml
+++ b/app/src/main/res/layout/fragment_vacancy_detail.xml
@@ -69,5 +69,28 @@
         android:text="cgpa"
         android:textSize="24sp" />
 
+    <RelativeLayout
+        android:id="@+id/mybutton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/button_apply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/button_apply"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/button_applicants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/button_apply"
+            android:layout_alignTop="@id/button_apply"
+            android:layout_centerInParent="true"
+            android:text="@string/button_applicants"
+            android:visibility="invisible" />
+    </RelativeLayout>
 
 </LinearLayout>
