--- a/app/src/main/res/layout/fragment_vacancy_detail.xml
+++ b/app/src/main/res/layout/fragment_vacancy_detail.xml
@@ -6,6 +6,27 @@
 
     <TextView
 
+        android:id="@+id/student_biodata"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/vacancy_title"
+        android:textAlignment="center"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="20sp" />
+
+    <TextView
+
+        android:id="@+id/job_position_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/job_title"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
+
+
+    <TextView
+
         android:id="@+id/job_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,11 +35,18 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:textAlignment="viewStart"
-        android:textSize="24sp"
+        android:textSize="18sp" />
 
 
-        />
+    <TextView
 
+        android:id="@+id/student_detail_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/job_detail"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/job_detail"
@@ -30,8 +58,18 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="detail"
         android:textAlignment="viewStart"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
+
+    <TextView
+
+        android:id="@+id/student_position_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/job_position"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/position"
@@ -43,7 +81,17 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="position"
         android:textAlignment="viewStart"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
+
+    <TextView
+
+        android:id="@+id/student_area_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/job_area"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
 
     <TextView
@@ -56,7 +104,17 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="certificate"
         android:textAlignment="viewStart"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
+
+    <TextView
+
+        android:id="@+id/student_age_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/job_agelimit"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
 
     <TextView
@@ -67,7 +125,7 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="cgpa"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
     <RelativeLayout
         android:id="@+id/mybutton"
