--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -4,22 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatImageView
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:src="@mipmap/ic_user" />
+    <TextView
+
+        android:id="@+id/student_biodata"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/student_biodata"
+        android:textAlignment="center"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="20sp" />
 
 
-     <TextView
+    <TextView
 
          android:id="@+id/student_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
-         android:textSize="20sp" />
+        android:textSize="15sp" />
+
 
 
     <TextView
@@ -29,7 +32,17 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:text="contact"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textSize="15sp" />
+
+    <TextView
+
+        android:id="@+id/student_program_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/bio_data"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
 
     <TextView
@@ -42,7 +55,17 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="program enrolled"
         android:textAlignment="viewStart"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
+
+    <TextView
+
+        android:id="@+id/student_majors_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/majors"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
 
     <TextView
@@ -55,7 +78,17 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="certificate"
         android:textAlignment="viewStart"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
+
+    <TextView
+
+        android:id="@+id/student_cgpa_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/cgpa"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
 
     <TextView
@@ -66,7 +99,17 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="cgpa"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
+
+    <TextView
+
+        android:id="@+id/student_email_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/email"
+        android:textColor="@color/tw__composer_black"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/email"
@@ -77,7 +120,7 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="email"
         android:textAlignment="viewStart"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
 
 </LinearLayout>
